# sapiens-cmake-template

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  modInfo.lua
libs/splugins/: .gitignore  LICENSE  README.md
libs/splugins/Linux/: CMakeLists.txt
libs/splugins/SPVanilla/Mac/SPVanillaMac/SPVanilla.xcodeproj/: project.pbxproj
libs/splugins/SPVanilla/Windows/SPVanilla/: SPVanilla.vcxproj  SPVanilla.vcxproj.filters
libs/splugins/SPVanilla/src/: SPBiome.c  SPHeight.c  SPParticles.c
libs/splugins/Windows/SPCommon/: SPCommon.vcxproj  SPCommon.vcxproj.filters
libs/splugins/include/: SPBiome.h  SPLog.h  SPParticles.h
libs/splugins/lib/: SPCommon.lib  libSPCommon.dylib
libs/splugins/src/: SPLog.c
scripts/mainThread/: localPlayer.lua
src/: biome.c  height.c
